--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="TacoVsBurrito.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -58,7 +58,7 @@
     <button id="player4Button">Player 4</button>
 </div>
 
-    <script src="TacoVsBurrito.js"></script>
+    <script src="script.js"></script>
     
 
 </body>
